new web again...

--- a/New Web/newsite no bs/index.html
+++ b/New Web/newsite no bs/index.html
@@ -22,104 +22,8 @@
     <!--                 Navigation                   -->
     <!-- ============================================ -->
 
-    <header id="cs-navigation">
-      <div class="cs-container">
-        <!--Nav Logo-->
-        <!--Logo is turned white in the css with a filter on dark mode-->
-        <a href="" class="cs-logo" aria-label="back to home">
-          <img
-            src="../images/logos/eco-surf-logo-b-2.png"
-            alt="logo"
-            width="210"
-            height="29"
-            aria-hidden="true"
-            decoding="async"
-          />
-        </a>
-        <!--Navigation List-->
-        <nav class="cs-nav" role="navigation">
-          <!--Mobile Nav Toggle-->
-          <button class="cs-toggle" aria-label="mobile menu toggle">
-            <div class="cs-box" aria-hidden="true">
-              <span class="cs-line cs-line1" aria-hidden="true"></span>
-              <span class="cs-line cs-line2" aria-hidden="true"></span>
-              <span class="cs-line cs-line3" aria-hidden="true"></span>
-            </div>
-          </button>
-          <!-- We need a wrapper div so we can set a fixed height on the cs-ul in case the nav list gets too long from too many dropdowns being opened and needs to have an overflow scroll. This wrapper acts as the background so it can go the full height of the screen and not cut off any overflowing nav items while the cs-ul stops short of the bottom of the screen, which keeps all nav items in view no matter how mnay there are-->
-          <div class="cs-ul-wrapper">
-            <ul id="cs-expanded" class="cs-ul" aria-expanded="false">
-              <li class="cs-li">
-                <a href="" class="cs-li-link cs-active"> Home </a>
-              </li>
-              <li class="cs-li">
-                <a href="#why-choose-1485" class="cs-li-link"> About </a>
-              </li>
-              <!--Copy and paste this cs-dropdown list item and replace any .cs-li with this cs-dropdown group to make a new dropdown and it will work-->
-              <li class="cs-li cs-dropdown" tabindex="0">
-                <span class="cs-li-link"> Actividades </span>
-              </li>
-              <li class="cs-li">
-                <a href="" class="cs-li-link"> Ponentes </a>
-              </li>
-              <li class="cs-li">
-                <a href="" class="cs-li-link"> Entradas </a>
-              </li>
-              <li class="cs-li">
-                <a href="" class="cs-li-link"> Contacto </a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-        <div class="cs-contact-group">
-          <div class="cs-social">
-            <a href="" class="cs-social-link">
-              <img
-                class="cs-social-icon"
-                src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/facebook-1a.svg"
-                alt="logo"
-                width="12"
-                height="12"
-                aria-hidden="true"
-                decoding="async"
-              />
-            </a>
-            <a href="" class="cs-social-link">
-              <img
-                class="cs-social-icon"
-                src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/twitter-1a.svg"
-                alt="logo"
-                width="12"
-                height="12"
-                aria-hidden="true"
-                decoding="async"
-              />
-            </a>
-            <a href="" class="cs-social-link">
-              <img
-                class="cs-social-icon"
-                src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/instagram1a.svg"
-                alt="logo"
-                width="12"
-                height="12"
-                aria-hidden="true"
-                decoding="async"
-              />
-            </a>
-            <a href="" class="cs-social-link">
-              <img
-                class="cs-social-icon"
-                src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Icons/youtube1a.svg"
-                alt="logo"
-                width="12"
-                height="12"
-                aria-hidden="true"
-                decoding="async"
-              />
-            </a>
-          </div>
-        </div>
-      </div>
+    <header class="header">
+      <a href="#" class="logo"></a>
     </header>
 
     <section class="cookies-section">
