--- a/final-web/index.html
+++ b/final-web/index.html
@@ -1,31 +1,41 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>eco-surf</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <script src="script.js"></script>
-</head>
-<body>
-    <section  id="landing-section">
-        <div class="showcase">
-            <header>
-          <h2 class="logo">ECOSURF</h2>
-          <div class="toggle"></div>
+  </head>
+  <body>
+    <section id="landing-section">
+      <div class="showcase">
+        <header>
+          <nav class="navbar">
+            <h2 class="logo">ECOSURF</h2>
+            <div class="container">
+              <ul class="nav-menu">
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Acerca</a></li>
+                <li><a href="#">Servicios</a></li>
+                <li><a href="#">Contacto</a></li>
+              </ul>
+            </div>
+          </nav>
         </header>
         <video src="video/surf-video.mp4" muted loop autoplay></video>
         <div class="overlay"></div>
         <div class="text">
-          <h2>Never Stop To </h2> 
+          <h2>Never Stop To</h2>
           <h3>Exploring The World</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat.</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
           <a href="#">Explore</a>
         </div>
-
-        </div>
-      </section>
-</body>
+      </div>
+    </section>
+  </body>
 </html>
