--- a/final-web/index.html
+++ b/final-web/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>eco-surf</title>
+    <title>Eco-Surf</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js"></script>
   </head>
@@ -11,7 +11,9 @@
       <div class="showcase">
         <header>
           <nav class="navbar">
-            <h2 class="logo">ECOSURF</h2>
+            <h2 class="logo">
+              <a href=""> Eco-Surf</a>
+            </h2>
             <div class="container">
               <ul class="nav-menu">
                 <li><a href="#">Inicio</a></li>
@@ -25,15 +27,14 @@
         <video src="video/surf-video.mp4" muted loop autoplay></video>
         <div class="overlay"></div>
         <div class="text">
-          <h2>Never Stop To</h2>
-          <h3>Exploring The World</h3>
+          <h2>¡Únete a la Ola de Cambio!</h2>
+          <h3>Surfeando por un Océano Limpio</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
+            Únete a nosotros en un emocionante evento de surf y limpieza de playas. ¡Ven y sé parte de la revolución para conservar nuestros océanos! Disfruta del surf mientras ayudamos a limpiar nuestras costas y proteger el medio ambiente marino.
           </p>
-          <a href="#">Explore</a>
+          <a href="#">Descubre más</a>
+        </div>
+        
         </div>
       </div>
     </section>
