--- a/New Web/newsite no bs/index.html
+++ b/New Web/newsite no bs/index.html
@@ -618,7 +618,7 @@
     <!--                   Pricing                    -->
     <!-- ============================================ -->
 
-    <section id="pricing-1518">
+    <section id="pricing-section">
       <div class="cs-container">
         <div class="cs-content">
           <span class="cs-topper">Precios</span>
@@ -631,12 +631,12 @@
               <h3 class="cs-h3">Todo Gratis!</h3>
               <svg
                 class="cs-mask"
-                id="Layer_2-1518"
+                id="Layer_2-section"
                 xmlns="http://www.w3.org/2000/svg"
                 preserveAspectRatio="none"
                 viewBox="0 0 371.1 166.7"
               >
-                <g id="Layer_1-2-1518">
+                <g id="Layer_1-2-section">
                   <path
                     stroke="var(--maskBorder)"
                     d="m12.82,19.67C2.01,56.2-7.54,129.35,28.82,159.67c1.42,1.2,2.98,1.42,5,2,2.02.58,4.85,1.18,7,1,98.77-7.85,195.12-12.76,295-7,6.59.39,10.92-1.66,14-6,5.48-7.78,9-16.68,11-27,6.1-30.94,12.55-63.62-2-95-8.96-19.27-30.85-24.93-57-25-108.29-.23-195.35.39-262,2-16.86.41-23.17,2.01-27,15Z"
@@ -762,12 +762,12 @@
               <h3 class="cs-h3">1-8 Years</h3>
               <svg
                 class="cs-mask"
-                id="Layer_2-1518"
+                id="Layer_2-section"
                 xmlns="http://www.w3.org/2000/svg"
                 preserveAspectRatio="none"
                 viewBox="0 0 371.1 166.7"
               >
-                <g id="Layer_1-2-1518">
+                <g id="Layer_1-2-section">
                   <path
                     stroke="var(--maskBorder)"
                     d="m12.82,19.67C2.01,56.2-7.54,129.35,28.82,159.67c1.42,1.2,2.98,1.42,5,2,2.02.58,4.85,1.18,7,1,98.77-7.85,195.12-12.76,295-7,6.59.39,10.92-1.66,14-6,5.48-7.78,9-16.68,11-27,6.1-30.94,12.55-63.62-2-95-8.96-19.27-30.85-24.93-57-25-108.29-.23-195.35.39-262,2-16.86.41-23.17,2.01-27,15Z"
@@ -893,12 +893,12 @@
               <h3 class="cs-h3">1-8 Years</h3>
               <svg
                 class="cs-mask"
-                id="Layer_2-1518"
+                id="Layer_2-section"
                 xmlns="http://www.w3.org/2000/svg"
                 preserveAspectRatio="none"
                 viewBox="0 0 371.1 166.7"
               >
-                <g id="Layer_1-2-1518">
+                <g id="Layer_1-2-section">
                   <path
                     stroke="var(--maskBorder)"
                     d="m12.82,19.67C2.01,56.2-7.54,129.35,28.82,159.67c1.42,1.2,2.98,1.42,5,2,2.02.58,4.85,1.18,7,1,98.77-7.85,195.12-12.76,295-7,6.59.39,10.92-1.66,14-6,5.48-7.78,9-16.68,11-27,6.1-30.94,12.55-63.62-2-95-8.96-19.27-30.85-24.93-57-25-108.29-.23-195.35.39-262,2-16.86.41-23.17,2.01-27,15Z"
