--- a/final-web/about.html
+++ b/final-web/about.html
@@ -22,53 +22,52 @@
         </div>
       </nav>
     </header>
-
-    <section id="about-section">
-      <div class="about-section">
-        <div class="container">
-          <div class="row">
-            <div class="content-column col-lg-6 col-md-12 col-sm-12 order-2">
-              <div class="inner-column">
-                <div class="sec-title">
-                  <span class="title">About Company</span>
-                  <h2>We are leader in <br />Industrial market Since 1992</h2>
-                </div>
-                <div class="text">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                  laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                  irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur.
-                </div>
-                <ul class="list-style-one">
-                  <li>Lorem Ipsum is simply dummy tex</li>
-                  <li>Consectetur adipisicing elit</li>
-                  <li>Sed do eiusmod tempor incididunt</li>
-                </ul>
-                <div class="btn-box">
-                  <a href="#" class="theme-btn btn-style-one">Contact Us</a>
-                </div>
+    <section class="about-section">
+      <div class="container">
+        <div class="row clearfix">
+          <!--Content Column-->
+          <div class="content-column col-md-6 col-sm-12 col-xs-12">
+            <div class="inner-column">
+              <div class="sec-title">
+                <div class="title">About Us</div>
+                <h2>
+                  We Are The Leader In <br />
+                  The Interiores
+                </h2>
               </div>
+              <div class="text">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+                of type and scrambled it to make a type specimen book. It has
+                survived not only five centuries
+              </div>
+              <div class="email">
+                Request Quote:
+                <span class="theme_color">freequote@gmail.com</span>
+              </div>
+              <a href="about.html" class="theme-btn btn-style-three"
+                >Read More</a
+              >
             </div>
+          </div>
 
-            <!-- Image Column -->
-            <div class="image-column col-lg-6 col-md-12 col-sm-12">
-              <div class="inner-column wow fadeInLeft">
-                <figure class="image-1">
-                  <a href="#" class="lightbox-image" data-fancybox="images"
-                    ><img
-                      src="https://i.ibb.co/QP6Nmpf/image-1-about.jpg"
-                      alt=""
-                  /></a>
-                </figure>
-                <figure class="image-2">
-                  <a href="#" class="lightbox-image" data-fancybox="images"
-                    ><img
-                      src="https://i.ibb.co/JvN0NVB/image-2-about.jpg"
-                      alt=""
-                  /></a>
-                </figure>
+          <!--Image Column-->
+          <div class="image-column col-md-6 col-sm-12 col-xs-12">
+            <div
+              class="inner-column"
+              data-wow-delay="0ms"
+              data-wow-duration="1500ms"
+            >
+              <div class="image">
+                <img src="assets/images/stock/wallpaper1.jpg" alt="" />
+                <div class="overlay-box">
+                  <div class="year-box">
+                    <span class="number">5</span>Years <br />
+                    Experience <br />
+                    Working
+                  </div>
+                </div>
               </div>
             </div>
           </div>
