integracion de landing y footer

--- a/final-web/about.html
+++ b/final-web/about.html
@@ -5,12 +5,15 @@
     <title>Eco-Surf</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+    />
   </head>
   <body>
-
     <!-- ============================================ -->
-                  <!--About Section-->
+    <!--About Section-->
     <!-- ============================================ -->
     <section id="about-section">
       <div class="about-section">
@@ -90,7 +93,7 @@
         <div class="wave" id="wave3"></div>
         <div class="wave" id="wave4"></div>
       </div>
-      
+
       <!--footer-->
       <div class="row">
         <div class="footer-col">
