--- a/final-web/index.html
+++ b/final-web/index.html
@@ -5,6 +5,11 @@
     <title>Eco-Surf</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js"></script>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+    />
   </head>
   <body>
     <section id="landing-section">
@@ -228,34 +233,13 @@
         <div class="footer-col">
           <h4>follow us</h4>
           <div class="social-links">
-            <ul class="social-icon">
-              <li class="social-icon__item">
-                <a class="social-icon__link" href="#">
-                  <ion-icon name="logo-facebook"></ion-icon>
-                </a>
-              </li>
-              <li class="social-icon__item">
-                <a class="social-icon__link" href="#">
-                  <ion-icon name="logo-twitter"></ion-icon>
-                </a>
-              </li>
-              <li class="social-icon__item">
-                <a class="social-icon__link" href="#">
-                  <ion-icon name="logo-linkedin"></ion-icon>
-                </a>
-              </li>
-              <li class="social-icon__item">
-                <a class="social-icon__link" href="#">
-                  <ion-icon name="logo-instagram"></ion-icon>
-                </a>
-              </li>
-            </ul>
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
           </div>
         </div>
       </div>
     </footer>
-
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
