--- a/New Web/newsite no bs/index.html
+++ b/New Web/newsite no bs/index.html
@@ -92,7 +92,7 @@
       </div>
     </section>-->
 
-    <section class="hero">
+    <section class="header">
       <div class="content">
         <h2>¡Únete a la Ola de <span>Cambio</span>!</h2>
         <h3>Surfeando por un Océano Limpio</h3>
@@ -105,6 +105,7 @@
         <a href="#">Descubre más</a>
       </div>
 
+      <!--nav-->
       <div id="video-wrapper">
         <video autoplay muted loop id="video-background">
           <source src="../video/surf-video.mp4" type="video/mp4" />
@@ -113,40 +114,22 @@
       </div>
     </section>
 
-    <!--<section id="landing-section">
-      <div class="showcase">
-        <header>
-          <nav class="navigationWrapper">
-            <div class="logoWrapper">
-              <span class="logo">Eco Surf</span>
-            </div>
-            <ul class="navigation">
-              <li class="parent"><a class="link" href="#">Inicio</a></li>
-              <li class="parent"><a class="link" href="#">About</a></li>
-              <li class="parent"><a class="link" href="#">Actividades</a></li>
-              <li class="parent"><a class="link" href="#">Ponentes</a></li>
-              <li class="parent"><a class="link" href="#">Horario</a></li>
-              <li class="parent"><a class="link" href="#">Contacto</a></li>
-            </ul>
-          </nav>
-        </header>
-        <video src="video/surf-video.mp4" muted loop autoplay></video>
-        <div class="overlay"></div>
-        <div class="text">
-          <h2>¡Únete a la Ola de Cambio!</h2>
-          <h3>Surfeando por un Océano Limpio</h3>
-          <p>
-            Únete a nosotros en un emocionante evento de surf y limpieza de playas. ¡Ven y sé parte de la revolución para
-            conservar nuestros océanos! Disfruta del surf mientras ayudamos a limpiar nuestras costas y proteger el medio
-            ambiente marino.
-          </p>
-          <a href="#">Descubre más</a>
-        </div>
+    <nav class="sticky navbar">
+      <div class="brand  display__logo">
+        <a href="#top" class="nav__link"> <span class="logo">Logo</span></a>
       </div>
-  
+    
+      <input type="checkbox" id="nav" class="hidden" />
+      <label for="nav" class="nav__open"><i></i><i></i><i></i></label>
+      <div class="nav">
+        <ul class="nav__items">
+          <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">About us</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">Portfolio</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
+        </ul>
       </div>
-    </section>-->
-
+    </nav>
     <!-- ============================================ -->
     <!--               Why Choose Us                  -->
     <!-- ============================================ -->
