--- a/New Web/newsite no bs/index.html
+++ b/New Web/newsite no bs/index.html
@@ -333,12 +333,12 @@
             <!--Tablet and above Image-->
             <source
               media="(min-width: 601px)"
-              srcset="../images/stock/surfers2.jpg"
+              srcset="../images/stock/surfboards.jpg"
             />
             <img
               loading="lazy"
               decoding="async"
-              src="../images/stock/surfers2.jpg"
+              src="../images/stock/vertical1.jpg"
               alt="people standing"
               width="605"
               height="690"
