--- a/New Web/newsite no bs/index.html
+++ b/New Web/newsite no bs/index.html
@@ -105,31 +105,14 @@
         <a href="#">Descubre más</a>
       </div>
 
-      <!--nav-->
-      <div id="video-wrapper">
-        <video autoplay muted loop id="video-background">
-          <source src="../video/surf-video.mp4" type="video/mp4" />
-          Your browser does not support the video tag.
-        </video>
-      </div>
-    </section>
-
-    <nav class="sticky navbar">
-      <div class="brand  display__logo">
-        <a href="#top" class="nav__link"> <span class="logo">Logo</span></a>
-      </div>
-    
-      <input type="checkbox" id="nav" class="hidden" />
-      <label for="nav" class="nav__open"><i></i><i></i><i></i></label>
-      <div class="nav">
-        <ul class="nav__items">
-          <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">About us</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Portfolio</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
-        </ul>
-      </div>
-    </nav>
+      <!--navbar-->
+    <div id="video-wrapper">
+      <video autoplay muted loop id="video-background">
+        <source src="../video/surf-video.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+      </video>
+    </div>
+  </section>
     <!-- ============================================ -->
     <!--               Why Choose Us                  -->
     <!-- ============================================ -->
