--- a/version-actual/website/index.html
+++ b/version-actual/website/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Página con Video de Fondo</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="about.css" />
-    <link rel="stylesheet" href="navbar.css" />
-    <link rel="stylesheet" href="contact.css" />
-    <link rel="stylesheet" href="footer.css" />
-    <link rel="stylesheet" href="sponsors.css" />
-    <link rel="stylesheet" href="pricing.css" />
-    <link rel="stylesheet" href="whyUsSection.css" />
-    <link rel="stylesheet" href="logo-slider.css" />
-    <link rel="stylesheet" href="speakers.css" />
-    <link rel="stylesheet" href="cookies.css" />
-    <link rel="stylesheet" href="cta.css" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/about.css" />
+    <link rel="stylesheet" href="css/navbar.css" />
+    <link rel="stylesheet" href="css/contact.css" />
+    <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="css/sponsors.css" />
+    <link rel="stylesheet" href="css/pricing.css" />
+    <link rel="stylesheet" href="css/whyUsSection.css" />
+    <link rel="stylesheet" href="css/logo-slider.css" />
+    <link rel="stylesheet" href="css/speakers.css" />
+    <link rel="stylesheet" href="css/cookies.css" />
+    <link rel="stylesheet" href="css/cta.css" />
     <link
       rel="stylesheet"
       type="text/css"
