logo del navbar

--- a/version-actual/website/index.html
+++ b/version-actual/website/index.html
@@ -28,70 +28,6 @@
     <!--                 Navigation                   -->
     <!-- ============================================ -->
 
-    <!--<header class="header">
-      <a href="#" class="logo"></a>
-    </header>
-
-    <section class="cookies-section">
-      <div class="cookies-card">
-        <p class="title">Cookies</p>
-        <p class="info">
-          Al usar esta página web aceptas el uso de cookies para fines de
-          rastreo.
-          <a href="#">Leer Más</a>
-        </p>
-        <button class="cta-cookies" onclick="disapearSection()">
-          Aceptar Todo
-        </button>
-      </div>
-    </section>
-
-    <section class="hero">
-      <div class="content">
-        <h1>EcoSurf</h1>
-        <a href="#">COMPRAR</a>
-      </div>
-
-      <div id="video-wrapper">
-        <video autoplay muted loop id="video-background">
-          <source src="../video/surf-video.mp4" type="video/mp4" />
-          Your browser does not support the video tag.
-        </video>
-      </div>
-
-      <div class="info-section">
-        <div class="info-container">
-          <div class="date-wrap">
-            <h5 class="text-white">
-              <i class="custom-icon bi-clock me-2"></i>
-              08 - 10, Agosto 2024
-            </h5>
-          </div>
-
-          <div class="location-wrap">
-            <h5 class="text-white">
-              <i class="custom-icon bi-geo-alt me-2"></i>
-              Playa de la Concha, San Sebastián, España
-            </h5>
-          </div>
-
-          <div class="social-share">
-            <ul class="social-icons">
-              <li>
-                <a href="#"><span class="bi-facebook"></span></a>
-              </li>
-              <li>
-                <a href="#"><span class="bi-twitter"></span></a>
-              </li>
-              <li>
-                <a href="#"><span class="bi-instagram"></span></a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </section>-->
-
     <section class="header hero">
       <div class="content">
         <h2>¡Únete a la Ola de <span>Cambio</span>!</h2>
@@ -118,7 +54,7 @@
 
     <nav class="sticky navbar">
       <div class="brand display__logo">
-        <a href="#top" class="nav__link"> <span class="logo">Logo</span></a>
+        <a href="#top" class="nav__link"> <img src="../images/logos/Ecosurf/eco-surf-logo-w-1.png"></a>
       </div>
 
       <input type="checkbox" id="nav" class="hidden" />
@@ -126,11 +62,11 @@
       <div class="nav">
         <ul class="nav__items">
           <li class="nav__item">
-            <a href="index.html" class="nav__link">Home</a>
+            <a href="index.html" class="nav__link">Inicio</a>
           </li>
-          <li class="nav__item"><a href="#" class="nav__link">About us</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Portfolio</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
+          <li class="nav__item"><a href="secondpage.html" class="nav__link">Conocenos</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">Tabla</a></li>
+          <li class="nav__item"><a href="#" class="nav__link">Formulario</a></li>
         </ul>
       </div>
     </nav>
@@ -1301,114 +1237,6 @@
     <!-- ============================================ -->
     <!--                   Footer                     -->
     <!-- ============================================ -->
-
-    <!--<footer id="cs-footer-1292">
-      <div class="cs-container">
-        <-- Logo Group --a>
-        <div class="cs-logo-group">
-          <a aria-label="go back to home" class="cs-logo" href="">
-            <img
-              class="cs-logo-img"
-              aria-hidden="true"
-              loading="lazy"
-              decoding="async"
-              src="../images/logos/eco-surf-logo-b-2.png"
-              alt="logo"
-              width="240"
-              height="32"
-            />
-          </a>
-          <p class="cs-text">
-            We planning, designing, financing, and executing projects.
-          </p>
-          <a href="mailto:info@mail.com" class="cs-link">
-            <img
-              class="cs-link-icon"
-              aria-hidden="true"
-              loading="lazy"
-              decoding="async"
-              src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/construction-mail.svg"
-              alt="icon"
-              width="24"
-              height="24"
-            />
-            hi@ecosurf.com
-          </a>
-        </div>
-        <-- Links --a>
-        <ul class="cs-nav">
-          <li class="cs-nav-li">
-            <span class="cs-header">Services</span>
-          </li>
-          <li class="cs-nav-li">
-            <a class="cs-nav-link" href="">Email Marketing</a>
-          </li>
-          <li class="cs-nav-li">
-            <a class="cs-nav-link" href="">Brandings</a>
-          </li>
-          <li class="cs-nav-li">
-            <a class="cs-nav-link" href="">Campaign</a>
-          </li>
-          <li class="cs-nav-li">
-            <a class="cs-nav-link" href="">Offline</a>
-          </li>
-        </ul>
-        <ul class="cs-nav">
-          <li class="cs-nav-li">
-            <span class="cs-header">About</span>
-          </li>
-          <li class="cs-nav-li">
-            <a class="cs-nav-link" href="">Our Story</a>
-          </li>
-          <li class="cs-nav-li">
-            <a class="cs-nav-link" href="">Benefits</a>
-          </li>
-          <li class="cs-nav-li">
-            <a class="cs-nav-link" href="">Team</a>
-          </li>
-          <li class="cs-nav-li">
-            <a class="cs-nav-link" href="">Career</a>
-          </li>
-        </ul>
-        <ul class="cs-nav">
-          <li class="cs-nav-li">
-            <span class="cs-header">Contact</span>
-          </li>
-          <li class="cs-nav-li">
-            <a class="cs-nav-link" href="">Facebook</a>
-          </li>
-          <li class="cs-nav-li">
-            <a class="cs-nav-link" href="">Instagram</a>
-          </li>
-          <li class="cs-nav-li">
-            <a class="cs-nav-link" href="">LinkedIn</a>
-          </li>
-        </ul>
-        <ul class="cs-nav">
-          <li class="cs-nav-li">
-            <span class="cs-header">Help</span>
-          </li>
-          <li class="cs-nav-li">
-            <a class="cs-nav-link" href="">FAQ</a>
-          </li>
-          <li class="cs-nav-li">
-            <a class="cs-nav-link" href="">Contact us</a>
-          </li>
-        </ul>
-      </div>
-      <div class="cs-bottom">
-        <span class="cs-copyright"
-          >Copyright© 2024.
-          <a class="cs-copyright-link" href="">Ecosurf.</a>
-          All Right Reserved.
-        </span>
-        <a href="" class="cs-copyright-link">Terms of Service</a>
-        <a href="" class="cs-copyright-link">Privacy Policy</a>
-      </div>
-      <--Floating Cirlces--a>
-      <div class="cs-floater" aria-hidden="true"></div>
-    </footer>-->
-
     <footer id="footer">
       <!--olas-->
       <div class="waves">
