cambio de nombres

--- a/version-actual/website/index.html
+++ b/version-actual/website/index.html
@@ -38,7 +38,7 @@
           océanos! Disfruta del surf mientras ayudamos a limpiar nuestras costas
           y proteger el medio ambiente marino.
         </p>
-        <a href="#">Descubre más</a>
+        <a href="#" class="cs-button-solid">Descubre más</a>
       </div>
 
       <!-- ============================================ -->
@@ -74,7 +74,7 @@
     <!--               Why Choose Us                  -->
     <!-- ============================================ -->
 
-    <section id="why-choose-1485">
+    <section id="why-choose-us">
       <div class="cs-container">
         <div class="cs-image-group">
           <!--Top left image-->
@@ -266,7 +266,7 @@
     <!--                  Services                    -->
     <!-- ============================================ -->
 
-    <section id="services-1666">
+    <section id="services">
       <div class="cs-container">
         <div class="cs-image-group">
           <picture class="cs-picture">
@@ -1090,7 +1090,7 @@
     <!--                   Contact                    -->
     <!-- ============================================ -->
 
-    <section id="contact-1333">
+    <section id="contact">
       <div class="cs-container">
         <!--Form-->
         <form
