--- a/version-actual/website/index.html
+++ b/version-actual/website/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="css/navbar.css" />
     <link rel="stylesheet" href="css/contact.css" />
     <link rel="stylesheet" href="css/footer.css" />
-    <link rel="stylesheet" href="css/sponsors.css" />
     <link rel="stylesheet" href="css/pricing.css" />
     <link rel="stylesheet" href="css/whyUsSection.css" />
     <link rel="stylesheet" href="css/logo-slider.css" />
@@ -54,7 +53,9 @@
 
     <nav class="sticky navbar">
       <div class="brand display__logo">
-        <a href="#top" class="nav__link"> <img src="../images/logos/Ecosurf/eco-surf-logo-w-1.png"></a>
+        <a href="#top" class="nav__link">
+          <img src="../images/logos/Ecosurf/eco-surf-logo-w-1.png"
+        /></a>
       </div>
 
       <input type="checkbox" id="nav" class="hidden" />
@@ -64,9 +65,13 @@
           <li class="nav__item">
             <a href="index.html" class="nav__link">Inicio</a>
           </li>
-          <li class="nav__item"><a href="secondpage.html" class="nav__link">Conocenos</a></li>
+          <li class="nav__item">
+            <a href="secondpage.html" class="nav__link">Conocenos</a>
+          </li>
           <li class="nav__item"><a href="#" class="nav__link">Tabla</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Formulario</a></li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Formulario</a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -637,7 +642,7 @@
           <img src="../images/logos/ods.jpg" alt="" />
         </div>
         <div class="slide">
-          <img src="../images/logos/eco-surf-logo-b-2.png" alt="" />
+          <img src="../images/logos/Ecosurf/eco-surf-logo-b-1.png" alt="" />
         </div>
         <div class="slide">
           <img src="../images/logos/mahou_1200_color.png" alt="" />
