--- a/version-actual/website/index.html
+++ b/version-actual/website/index.html
@@ -454,13 +454,14 @@
                 mientras explora el impacto del cambio climático desde una
                 perspectiva científica. Descubre cómo la física puede ayudarnos
                 a comprender y abordar los desafíos ambientales que enfrenta
-                nuestro planeta.
+                nuestro planeta. ¡Una charla imperdible para amantes de la
+                ciencia y la sostenibilidad!
+
               </p>
             </div>
           </div>
         </div>
         <!-- Fin del Item 1 -->
-
         <!-- Item 2 -->
         <div class="item-container">
           <div class="img-container">
@@ -533,7 +534,11 @@
                 Sumérgete en la belleza de la naturaleza con nuestro fotógrafo
                 especializado en vida salvaje. Explora las increíbles imágenes
                 de la vida marina y costera mientras descubres la importancia de
-                conservar nuestros ecosistemas naturales.
+                conservar nuestros ecosistemas naturales. ¡Una charla
+                inspiradora para amantes de la fotografía y la naturaleza!
+                No te la pierdas. Juan Carlos Millán es un fotógrafo de la naturaleza
+                especializado en vida salvaje. Ha trabajado en proyectos de conservación y
+                documentación de la vida marina y costera en todo el mundo.
               </p>
             </div>
           </div>
@@ -557,7 +562,10 @@
                 Únete a nuestra ecologista bióloga en una exploración de los
                 ecosistemas costeros y la importancia de preservarlos. Descubre
                 cómo cada acción individual puede marcar la diferencia en la
-                protección de nuestro hogar, la Tierra.
+                protección de nuestro hogar, la Tierra. ¡Una charla inspiradora
+                para amantes de la naturaleza y la conservación!
+                Estudia la vida marina y costera en todo el mundo y trabaja en proyectos
+                de conservación y documentación de la vida marina y costera.
               </p>
             </div>
           </div>
@@ -585,7 +593,9 @@
                 Únete a nuestra surfera profesional mientras comparte su pasión
                 por las olas y la conexión única que experimentamos en el
                 océano. Descubre cómo el surf puede inspirarnos a cuidar nuestro
-                planeta y a vivir en armonía con la naturaleza.
+                planeta y a vivir en armonía con la naturaleza. ¡Una charla
+                inspiradora para amantes del surf y la sostenibilidad! Una campeona de surf
+                que ha competido en torneos de surf en todo el mundo.
               </p>
             </div>
           </div>
