--- a/version-actual/website/pages/timetable.html
+++ b/version-actual/website/pages/timetable.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="timetable.css" />
     <link rel="stylesheet" href="../css/navbar.css" />
     <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
-    <nav class="sticky navbar">
+    <nav class="sticky navbar" style="background-color: black;">
       <div class="brand display__logo">
         <a href="#top" class="nav__link"> <span class="logo">Logo</span></a>
       </div>
