--- a/version-actual/website/pages/timetable.html
+++ b/version-actual/website/pages/timetable.html
@@ -10,9 +10,14 @@
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
-    <nav class="sticky navbar" style="background-color: black;">
+    <!-- ============================================ -->
+    <!--                   Navigation                     -->
+    <!-- ============================================ -->
+    <nav class="sticky navbar">
       <div class="brand display__logo">
-        <a href="#top" class="nav__link"> <span class="logo">Logo</span></a>
+        <a href="#top" class="nav__link">
+          <img src="../images/logos/Ecosurf/eco-surf-logo-w-1.png"
+        /></a>
       </div>
 
       <input type="checkbox" id="nav" class="hidden" />
@@ -20,14 +25,19 @@
       <div class="nav">
         <ul class="nav__items">
           <li class="nav__item">
-            <a href="index.html" class="nav__link">Home</a>
+            <a href="index.html" class="nav__link">Inicio</a>
           </li>
-          <li class="nav__item"><a href="#" class="nav__link">About us</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Portfolio</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
+          <li class="nav__item">
+            <a href="secondpage.html" class="nav__link">Conocenos</a>
+          </li>
+          <li class="nav__item"><a href="#" class="nav__link">Tabla</a></li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Formulario</a>
+          </li>
         </ul>
       </div>
     </nav>
+
     <div class="event-container">
       <h3 class="year">Junio</h3>
 
