--- a/version-actual/website/index.html
+++ b/version-actual/website/index.html
@@ -62,12 +62,12 @@
       <div class="nav">
         <ul class="nav__items">
           <li class="nav__item">
-            <a href="index.html" class="nav__link">Inicio</a>
+            <a href="#top" class="nav__link">Inicio</a>
           </li>
           <li class="nav__item">
-            <a href="secondpage.html" class="nav__link">Conocenos</a>
+            <a href="timetable.html" class="nav__link">Eventos</a>
           </li>
-          <li class="nav__item"><a href="#" class="nav__link">Tabla</a></li>
+          <li class="nav__item"><a href="form.html" class="nav__link">Unete!</a></li>
           <li class="nav__item">
             <a href="#" class="nav__link">Formulario</a>
           </li>
