--- a/version-actual/website/pages/timetable.html
+++ b/version-actual/website/pages/timetable.html
@@ -10,9 +10,16 @@
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
-    <nav class="sticky navbar" style="background-color: black;">
+
+      <!-- ============================================ -->
+      <!--                    Navbar                    -->
+      <!-- ============================================ -->
+
+    <nav class="sticky navbar">
       <div class="brand display__logo">
-        <a href="#top" class="nav__link"> <span class="logo">Logo</span></a>
+        <a href="#top" class="nav__link">
+          <img src="../../images/logos/Ecosurf/eco-surf-logo-w-1.png"
+        /></a>
       </div>
 
       <input type="checkbox" id="nav" class="hidden" />
@@ -20,14 +27,22 @@
       <div class="nav">
         <ul class="nav__items">
           <li class="nav__item">
-            <a href="index.html" class="nav__link">Home</a>
+            <a href="../index.html" class="nav__link">Inicio</a>
           </li>
-          <li class="nav__item"><a href="#" class="nav__link">About us</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Portfolio</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
+          <li class="nav__item">
+            <a href="timetable.html" class="nav__link">Eventos</a>
+          </li>
+          <li class="nav__item"><a href="form.html" class="nav__link">Unete!</a></li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Formulario</a>
+          </li>
         </ul>
       </div>
     </nav>
+      <!-- ============================================ -->
+      <!--                    Calendario                 -->
+      <!-- ============================================ -->
+
     <div class="event-container">
       <h3 class="year">Junio</h3>
 
@@ -171,6 +186,11 @@
         </div>
       </div>
     </div>
+
+
+    <!-- ============================================ -->
+    <!--                   Footer                     -->
+    <!-- ============================================ -->
 
     <footer id="footer">
       <!--olas-->
