--- a/version-actual/website/pages/form.html
+++ b/version-actual/website/pages/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Formulario de Registro para Competición de Surf</title>
-    <link rel="stylesheet" href="formstyle.css" />
+    <link rel="stylesheet" href="../css/formstyle.css" />
     <link rel="stylesheet" href="../css/styles.css" />
     <link rel="stylesheet" href="../css/navbar.css" />
     <link rel="stylesheet" href="../css/footer.css" />
@@ -15,8 +15,8 @@
     <!-- ============================================ -->
     <nav class="sticky navbar">
       <div class="brand display__logo">
-        <a href="#top" class="nav__link">
-          <img src="../images/logos/Ecosurf/eco-surf-logo-w-1.png"
+        <a href="../index.html" class="nav__link">
+          <img src="../../images/logos/Ecosurf/eco-surf-logo-w-1.png"
         /></a>
       </div>
 
@@ -25,14 +25,14 @@
       <div class="nav">
         <ul class="nav__items">
           <li class="nav__item">
-            <a href="index.html" class="nav__link">Inicio</a>
+            <a href="../index.html" class="nav__link">Inicio</a>
           </li>
           <li class="nav__item">
-            <a href="secondpage.html" class="nav__link">Conocenos</a>
+            <a href="../index.html#why-choose-us" class="nav__link">Conocenos</a>
           </li>
-          <li class="nav__item"><a href="#" class="nav__link">Tabla</a></li>
+          <li class="nav__item"><a href="timetable.html" class="nav__link">Calendario</a></li>
           <li class="nav__item">
-            <a href="#" class="nav__link">Formulario</a>
+            <a href="#cs-contact-242" class="nav__link">Formulario</a>
           </li>
         </ul>
       </div>
@@ -340,7 +340,7 @@
               aria-hidden="true"
               loading="lazy"
               decoding="async"
-              src="../../images/stock/join-hands.jpg"
+              src="../../images/stock/surfer-girl.jpg"
               alt="google map"
               width="462"
               height="438"
