--- a/version-actual/website/pages/timetable.html
+++ b/version-actual/website/pages/timetable.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Event Calendar</title>
-    <link rel="stylesheet" href="timetable.css" />
+    <link rel="stylesheet" href="../css/timetable.css" />
     <link rel="stylesheet" href="../css/navbar.css" />
     <link rel="stylesheet" href="../css/footer.css" />
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
-    <nav class="sticky navbar" style="background-color: black;">
+    <!-- ============================================ -->
+    <!--                   Navigation                     -->
+    <!-- ============================================ -->
+    <nav class="sticky navbar" style="background-color: rgba(0, 0, 0, 0.74);">
       <div class="brand display__logo">
-        <a href="#top" class="nav__link"> <span class="logo">Logo</span></a>
+        <a href="../index.html" class="nav__link">
+          <img src="../../images/logos/Ecosurf/eco-surf-logo-w-1.png"
+        /></a>
       </div>
 
       <input type="checkbox" id="nav" class="hidden" />
@@ -20,14 +25,23 @@
       <div class="nav">
         <ul class="nav__items">
           <li class="nav__item">
-            <a href="index.html" class="nav__link">Home</a>
+            <a href="../index.html" class="nav__link">Inicio</a>
           </li>
-          <li class="nav__item"><a href="#" class="nav__link">About us</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Portfolio</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
+          <li class="nav__item">
+            <a href="../index.html#why-choose-us" class="nav__link"
+              >Conocenos</a
+            >
+          </li>
+          <li class="nav__item">
+            <a href="timetable.html" class="nav__link">Calendario</a>
+          </li>
+          <li class="nav__item">
+            <a href="form.html#cs-contact-242" class="nav__link">Formulario</a>
+          </li>
         </ul>
       </div>
     </nav>
+
     <div class="event-container">
       <h3 class="year">Junio</h3>
 
